# get-fosscu-domain

./: .editorconfig  README.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 272cbc91aa16_changed_field_in_the_user_table.py  6293759d13ec_create_subdomain_table.py  71d7ed1b7248_add_more_columns_in_subdomain_table.py  90f6f02c4498_profile_table_init.py  9b63ce41a78a_user_table_init.py  b24c280c2c4b_removed_relationship.py  e4686ce4875c_profile_table_init.py  fae1dffbf3da_removed_profile_table.py
backend/src/get_fosscu_domain/: api.py  app.py  config.py  logging.py  postgres.py  rate_limiting.py
backend/src/get_fosscu_domain/auth/: auth.py  endpoints.py  schema.py
backend/src/get_fosscu_domain/health/: endpoints.py  schema.py
backend/src/get_fosscu_domain/models/: subdomain.py  user.py
backend/src/get_fosscu_domain/subdomain/: endpoints.py  schema.py
backend/src/get_fosscu_domain/utils/: netlify.py  profanity_filter.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: Domain.tsx  GitHubCallback.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useDeleteSubdomain.ts  useGetSubdomains.ts  useSubdomainCreate.ts
frontend/src/layouts/: RootLayout.tsx
frontend/src/pages/: About.tsx  Docs.css  Docs.tsx  GithubCallback.tsx  Home.tsx
frontend/src/routes/: index.tsx
frontend/src/styles/: squiggle.css  star.css  wave.css
