[project]
name = "get-fosscu-domain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "black>=24.10.0",
    "fastapi[standard]>=0.115.4",
    "httpx>=0.27.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
    "pytest>=8.3.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.17",
    "sqlalchemy>=2.0.36",
]
